// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checked switch 1`] = `
"<b-input-switch name=\\"f\\" checked=\\"\\" label=\\"switch 1\\">
    <label>
        <input name=\\"f\\" type=\\"checkbox\\" checked=\\"\\">
        <b-input-switch--icon></b-input-switch--icon>
        <b-input-switch--text>switch 1</b-input-switch--text>
    </label>
</b-input-switch>"
`;

exports[`Unchecked switch 1`] = `
"<b-input-switch name=\\"g\\" label=\\"switch 2\\">
    <label>
        <input name=\\"g\\" type=\\"checkbox\\">
        <b-input-switch--icon></b-input-switch--icon>
        <b-input-switch--text>switch 2</b-input-switch--text>
    </label>
</b-input-switch>"
`;
